fix: fix hero z-index issues

--- a/scss/_hero.scss
+++ b/scss/_hero.scss
@@ -10,13 +10,9 @@
     }
   }
 
-  &__heading {
-    position: relative;
-    z-index: 10;
-  }
-
   &__image {
     position: relative;
+    z-index: -10;
     height: 18rem;
     background-image: url('/img/hero.png');
     background-repeat: no-repeat;
@@ -124,7 +120,6 @@
   }
 
   &__badge {
-    z-index: 10;
     display: flex;
     align-items: center;
     width: 70%;
